--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Times New Roman', sans-serif;
   font-size: 16px;
   color: #999999; }
 
@@ -9,12 +9,12 @@ body {
 .btn-view-more, .btn-blog-view-more, .submit-btn {
   font-size: 16px;
   text-transform: capitalize;
-  border-radius: 0px;
+  border-radius: 17px;
   border-color: transparent;
   background-color: #000;
   color: #fff;
-  padding: 3px 12px;
-  transition: 1s linear;
+  padding: 5px 12px;
+  transition: .1s linear;
   -moz-transition: 0.3s linear;
   /* FF3.7+ */
   -o-transition: 0.3s linear;
@@ -29,7 +29,7 @@ body {
 
 .btn-view-more:hover, .btn-blog-view-more:hover, .submit-btn:hover {
   color: #000;
-  background-color: #fff;
+  background-color: #FF0800;
   border-color: #000; }
 
 .section {
@@ -208,15 +208,15 @@ ul.social-media-ul li a {
   display: block;
   height: 45px;
   line-height: 45px;
-  -webkit-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
   margin-bottom: -1px;
-  border: 1px solid #fff;
+  border: 0.9px solid #111;
   font-size: 24px; }
 
 ul.social-media-ul li a:hover {
   background-color: #fff;
-  color: #2991d6; }
+  color: #FF0000; }
 
 .section-heading > .heading-wraper {
   margin-bottom: 50px; }
@@ -225,7 +225,7 @@ ul.social-media-ul li a:hover {
     font-weight: 400; }
     .section-heading > .heading-wraper > h2 .title {
       text-transform: uppercase;
-      color: #444444;
+      color: #fff;
       letter-spacing: 1px; }
 
 .about-us-thumbnail {
@@ -775,7 +775,7 @@ textarea:focus, input:focus, .uneditable-input:focus {
 
 #footer {
   padding: 30px 0;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.6);
   color: #fff;
   font-size: 13px;
   letter-spacing: 1px; }
@@ -783,4 +783,206 @@ textarea:focus, input:focus, .uneditable-input:focus {
 .footer-copyright, .footer-author {
   margin: 20px 0; }
 
+
+
+.visiblediv {
+    display: relative;
+}
+
+.hiddendiv {
+    display: none;
+
+}
+
+#about-us{
+  display: block;
+}
+
+
+@media (max-width:1200px) 
+    {
+        #about-us
+        {
+            display: none;
+        }
+    }
+
+
+
+    
+
+
+
+
+.our-team .team-row {
+  margin-left: -40px;
+  margin-right: -40px;
+}
+
+.our-team .team-wrap {
+  padding: 0 40px;
+}
+
+.our-team .container-fluid {
+  padding: 0 50px;
+  border-radius:1000px;
+}
+
+.team-img img {
+  
+  border-radius: 5000px;
+  -webkit-transition: all .1s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  overflow: hidden;
+  width: 100%;
+}
+
+.team-member,
+.team-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.team-title {
+  margin: 30px 0 7px;
+}
+
+.overlay {
+  background-color: rgba(20,20,20,.7);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.team-details {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  padding: 5%;
+  overflow: hidden;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.team-details p {
+  color: #fff;
+}
+
+.team-img:hover .team-details {
+  opacity: 1;
+  margin-top: -80px;
+}
+
+.team-img:hover .overlay {
+  opacity: 1;
+  border-radius:5000px;
+}
+
+.socials a {
+  display: inline-block;
+  width: 37px;
+  height: 37px;
+  background-color: transparent;
+}
+
+.socials i {
+  line-height: 37px;
+  color: #616161;
+  font-size: 14px;
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.team-details .socials i {
+  color: #fff;
+}
+
+.socials a:hover i {
+  color: #fff;
+  background-color: #355c7d;
+}
+
+
+
+
+
+
+
+
+
+
+
+.play { 
+  background:#9d998b;
+  border-radius: 50% / 10%;
+  color: #fff;
+  font-size: .6em; /* change this to change size */
+  height: 3em;
+  margin: 20px auto;
+  padding: 0;
+  position: relative;
+  text-align: center;
+  text-indent: 0.1em;
+  transition: all 100ms ;
+  width: 4em;
+  cursor: pointer;
+}
+
+.play:hover {
+  background:red;
+}
+
+.play::before { 
+  background: inherit;
+  border-radius: 5% / 50%;
+  bottom: 9%;
+  content: "";
+  left: -5%;
+  position: absolute;
+  right: -5%;
+  top: 9%;
+}
+
+.play::after {
+  border-style: solid;
+  border-width: 1em 0 1em 1.732em;
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.75);
+  content: ' ';
+  font-size: 0.75em;
+  height: 0;
+  margin: -1em 0 0 -0.75em;
+  top: 50%;
+  position: absolute;
+  width: 0;
+}
+
+/* Other */
+
+
+
+
+
+
 /*# sourceMappingURL=style.css.map */
+
+
